alambert    2005/11/03 01:15:02 UTC	(20051103-3417)
  Log:
  Add atheme.{account,channel}.delete_metadata

  Changes:	Modified:
  +63 -0	trunk/modules/xmlrpc/account.c (File Modified) 
  +80 -2	trunk/modules/xmlrpc/channel.c (File Modified) 


jilles      2005/11/03 01:14:14 UTC	(20051103-3415)
  Log:
  Clear out all mu->logins (including ircd_on_logout())
  on myuser_delete().
  

  Changes:	Modified:
  +0 -3		trunk/modules/nickserv/drop.c (File Modified) 
  +0 -3		trunk/modules/userserv/drop.c (File Modified) 
  +11 -0	trunk/src/node.c (File Modified) 


jilles      2005/11/02 23:23:21 UTC	(20051102-3413)
  Log:
  Update lastlogin time in expire check if they
  are logged in.
  

  Changes:	Modified:
  +11 -0	trunk/src/node.c (File Modified) 


nenolod     2005/11/02 23:08:29 UTC	(20051102-3411)
  Log:
  Fix some more bugs and issues with the XMLRPC implementation.
  

  Changes:	Modified:
  +2 -0		trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/11/02 22:53:00 UTC	(20051102-3409)
  Log:
  Fix compile error. Reported by eggy.
  

  Changes:	Modified:
  +1 -1		trunk/crypto/Makefile.in (File Modified) 


nenolod     2005/11/02 22:51:12 UTC	(20051102-3407)
  Log:
  More accurate handling of the HTTP 1.1 specification here.
  

  Changes:	Modified:
  +13 -3	trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/11/02 19:34:33 UTC	(20051102-3405)
  Log:
  XMLRPC fixes
  

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/main.c (File Modified) 
  +1 -1		trunk/src/xmlrpc.c (File Modified) 


nenolod     2005/11/02 19:09:20 UTC	(20051102-3403)
  Log:
  Crypto API support for RETURN.
  

  Changes:	Modified:
  +10 -2	trunk/modules/nickserv/return.c (File Modified) 
  +10 -2	trunk/modules/userserv/return.c (File Modified) 


nenolod     2005/11/02 18:52:35 UTC	(20051102-3401)
  Log:
  Compile crypto modules on *nix. On windows, we don't care at the moment. Perhaps in 1.0.
  

  Changes:	Modified:
  +1 -1		trunk/Makefile.in (File Modified) 

